--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Match Score",
   "short_name": "Match Score",
-  "start_url": "/index.html",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#121212",
   "theme_color": "#8A2BE2",
@@ -16,4 +16,5 @@
       "type": "image/png", "sizes": "512x512"
     }
   ]
+
 }
